class work from today

--- a/public/index.html
+++ b/public/index.html
@@ -42,8 +42,8 @@
         </div>
         <div id="offerApp" class="col col-8">
           <h1>Two of two columns</h1>
-          <p>{{ foo }}</p>
-          <p>{{ msg }}</p>
+          <p>{{ person.name }}</p>
+          <p>{{ person.email }}</p>
           <p>{{ nope }}</p>
           
           <ul v-for="row in offers">
