--- a/public/index.html
+++ b/public/index.html
@@ -42,9 +42,12 @@
         </div>
         <div id="offerApp" class="col col-8">
           <h1>Two of two columns</h1>
-          <p>{{ person.name }}</p>
-          <p>{{ person.email }}</p>
-          <p>{{ nope }}</p>
+          <form v-on:submit.prevent="fetchUserData">
+            <button type="submit">Refresh</button>
+          </form>
+          <p>{{ person.name.first }} {{ person.name.last }}</p>
+          <p>{{ prettyBirthday }}</p>
+          <p>{{  }}</p>
           
           <ul v-for="row in offers">
             <li>{{ row.name }} - {{row.salary}}</li>
@@ -57,7 +60,9 @@
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
 
     <script src="js/index.js"></script>
+
   </body>
 </html>
